# ssticket

./: .gitignore  LICENSE  README.md  config.py  crud.py  main.py  modules.py  pyproject.toml  schemas.py  wsclient.py
static/: form.html
