[tool.poetry]
name = "ssticket"
version = "0.1.0"
description = ""
authors = ["jerry <jerry@1030621717@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlalchemy = "^2.0.35"
python-multipart = "^0.0.9"
pydantic-settings = "^2.5.2"
nonebot2 = {extras = ["fastapi"], version = "^2.3.3"}
nonebot-adapter-feishu = "^2.6.2"

[tool.poetry.group.dev.dependencies]
nonebot-adapter-console = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
